RESOLVED FIXED144675
Fix <script srcset> being loaded by the preloader.
https://bugs.webkit.org/show_bug.cgi?id=144675
Summary Fix <script srcset> being loaded by the preloader.
Yoav Weiss
Reported 2015-05-06 00:36:24 PDT
Fix <script srcset> being loaded by the preloader.
Attachments
Patch (6.28 KB, patch)
2015-05-06 00:39 PDT, Yoav Weiss
no flags
Patch (6.36 KB, patch)
2015-05-06 00:43 PDT, Yoav Weiss
no flags
Patch (5.67 KB, patch)
2015-05-07 00:22 PDT, Yoav Weiss
no flags
Yoav Weiss
Comment 1 2015-05-06 00:39:23 PDT
Yoav Weiss
Comment 2 2015-05-06 00:43:40 PDT
Yoav Weiss
Comment 3 2015-05-06 00:46:34 PDT
A preloadScanner bug with srcset I found while going over the code is that it would download <script srcset> for no good reason. This patch fixes that.
Darin Adler
Comment 4 2015-05-06 09:21:56 PDT
Comment on attachment 252460 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=252460&action=review > LayoutTests/http/tests/loading/preload-script-src-expected.txt:6 > +This test needs to be run in DRT. Preload scanner should see the script resource. It’s not so good to have this in the test output. We should make this visible only when you are not running it in the test runner. > LayoutTests/http/tests/loading/preload-script-src.html:9 > +This test needs to be run in DRT. Preload scanner should see the script resource. It’s not great to refer to the test runner as DRT. The latest version is named WebKitTestRunner. > LayoutTests/http/tests/loading/preload-script-srcset-ignored-expected.txt:6 > +This test needs to be run in DRT. Preload scanner should not see the script resource since it's in a srcset attribute. It’s not so good to have this in the test output. We should make this visible only when you are not running it in the test runner. > LayoutTests/http/tests/loading/preload-script-srcset-ignored.html:9 > +This test needs to be run in DRT. Preload scanner should not see the script resource since it's in a srcset attribute. It’s not great to refer to the test runner as DRT. The latest version is named WebKitTestRunner.
Yoav Weiss
Comment 5 2015-05-07 00:22:35 PDT
WebKit Commit Bot
Comment 6 2015-05-07 01:10:25 PDT
Comment on attachment 252577 [details] Patch Clearing flags on attachment: 252577 Committed r183920: <http://trac.webkit.org/changeset/183920>
WebKit Commit Bot
Comment 7 2015-05-07 01:10:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.