Fix <script srcset> being loaded by the preloader. https://bugs.webkit.org/show_bug.cgi?id=144675

Reviewed by Darin Adler.

Source/WebCore:

Fix HTMLPreloadScanner to make sure that srcset is only loaded
when it is present on an <img>.

Tests: http/tests/loading/preload-script-src.html
       http/tests/loading/preload-script-srcset-ignored.html

* html/parser/HTMLPreloadScanner.cpp:
(WebCore::TokenPreloadScanner::StartTagScanner::processAttributes):

LayoutTests:

Add preloader tests to make sure that <script src> is preloaded,
and <script srcset> is not.

* http/tests/loading/preload-script-src-expected.txt: Added.
* http/tests/loading/preload-script-src.html: Added.
* http/tests/loading/preload-script-srcset-ignored-expected.txt: Added.
* http/tests/loading/preload-script-srcset-ignored.html: Added.


Canonical link: https://commits.webkit.org/162753@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183920 268f45cc-cd09-0410-ab3c-d52691b4dbfc